tree-sitter-skald/test/corpus/test.txt
==================
Variable declaration
==================

~myvar = "hello"

---

(source_file
  (variable_declaration
    name: (variable_name)
    value: (rvalue (simple_value (string)))))

==================
Mixed declaration and comment header
==================

-- This is a comment!
~ some_var = 3 -- This is a raw value
~ some_other = :call_method() -- this initialized the variable with a call to an external method

-- These are inherited variables, with local testing values
< imported_var = 0
< player_name = "Billy"

---

(source_file
  (comment)
  (variable_declaration
    name: (variable_name)
    value: (rvalue
      (simple_value
        (number)))
    (comment))
  (variable_declaration
    name: (variable_name)
    value: (rvalue
      (method_call
        method: (identifier)))
    (comment))
  (comment)
  (variable_declaration
    name: (variable_name)
    value: (rvalue
      (simple_value
        (number))))
  (variable_declaration
    name: (variable_name)
    value: (rvalue
      (simple_value
        (string)))))

==================
Basic block with attributed beat
==================

#start_block

Alice: Hello world

---

(source_file
  (block
    tag: (block_tag (identifier))
    (beat
      attribution: (attribution)
      content: (text_content (text_fragment)))))

=====================
Make sure colons are ignored outside of attributions
=====================

#block_tag

Beat text here, as always

char_name: This is attributed.

This one just tests a normal colon usage: we'll see if it works!

---

(source_file
  (block
    (block_tag
      (identifier))
    (beat
      (text_content
        (text_fragment)))
    (beat
      (attribution)
      (text_content
        (text_fragment)))
    (beat
      (text_content
        (text_fragment)))))
